k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dotnet-demo
  labels:
    app.kubernetes.io/part-of: dotnet-openshift-demo
    argocd.argoproj.io/managed-by: openshift-gitops
