k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-openshift-demo
  namespace: dotnet-demo
  labels:
    app: dotnet-openshift-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-openshift-demo
  template:
    metadata:
      labels:
        app: dotnet-openshift-demo
    spec:
      containers:
        - name: app
          image: ghcr.io/bafueh005/dotnet-openshift-demo:7d2aa71
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
