k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: dotnet-openshift-demo
  namespace: dotnet-demo
  labels:
    app: dotnet-openshift-demo
spec:
  to:
    kind: Service
    name: dotnet-openshift-demo
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
